[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scenes/Artifacts/Artifact.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/UI/watch.png" type="Texture" id=2]
[ext_resource path="res://Resources/Artifacts/physics-book.tres" type="Resource" id=3]
[ext_resource path="res://Assets/Fonts/Jost/static/Jost-Medium.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/UI/coil_logo.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/arrow.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/arrow/arrow_hover.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI/arrow/arrow_disabled.png" type="Texture" id=8]
[ext_resource path="res://Assets/UI/coil_logo_hover.png" type="Texture" id=9]
[ext_resource path="res://Scenes/UI/Button/Button.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/UI/Dashboard/Dashboard.gd" type="Script" id=11]
[ext_resource path="res://Assets/Clues/clue_paper.png" type="Texture" id=12]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 0.54902 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=2]
size = 35
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 50
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 35
use_mipmaps = true
use_filter = true
extra_spacing_bottom = -20
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=6]
size = 64
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 64
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[node name="DashBoard" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
modulate = Color( 0.47451, 0.227451, 0.501961, 1 )
margin_left = 10.0
margin_top = 10.0
margin_right = 1910.0
margin_bottom = 720.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="."]
modulate = Color( 0.705882, 0.12549, 0.164706, 1 )
margin_left = 10.0
margin_top = 730.0
margin_right = 260.0
margin_bottom = 1070.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel3" type="Panel" parent="."]
modulate = Color( 0.364706, 0.686275, 0.552941, 1 )
margin_left = 270.0
margin_top = 730.0
margin_right = 1310.0
margin_bottom = 1070.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel4" type="Panel" parent="."]
modulate = Color( 1, 0.835294, 0.254902, 1 )
margin_left = 1320.0
margin_top = 730.0
margin_right = 1560.0
margin_bottom = 1070.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel5" type="Panel" parent="."]
margin_left = 1570.0
margin_top = 730.0
margin_right = 1910.0
margin_bottom = 1070.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clue" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1450.0
margin_top = 800.0
margin_right = -1410.0
margin_bottom = 840.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Clue"]
margin_left = -70.0
margin_top = -40.0
margin_right = 8.0
margin_bottom = -11.0
rect_scale = Vector2( 10, 10 )
texture = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Region" type="Label" parent="Clue"]
margin_left = -50.0
margin_top = -30.0
margin_right = 860.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Secret clue: Space Graveyard"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowButton3" type="TextureButton" parent="Clue"]
margin_left = -170.0
margin_top = 60.0
margin_right = -162.0
margin_bottom = 68.0
rect_scale = Vector2( 10, 10 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowButton4" type="TextureButton" parent="Clue"]
margin_left = 810.0
margin_top = 140.0
margin_right = 818.0
margin_bottom = 148.0
rect_rotation = 180.0
rect_scale = Vector2( 10, 10 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Artifacts" type="Node2D" parent="."]
position = Vector2( 960, 350 )

[node name="A1" parent="Artifacts" instance=ExtResource( 1 )]
position = Vector2( -630, 10.0001 )
artifact = ExtResource( 3 )

[node name="A2" parent="Artifacts" instance=ExtResource( 1 )]
position = Vector2( -210, 10.0001 )
artifact = ExtResource( 3 )

[node name="A3" parent="Artifacts" instance=ExtResource( 1 )]
position = Vector2( 210, 10.0001 )
artifact = ExtResource( 3 )

[node name="A4" parent="Artifacts" instance=ExtResource( 1 )]
position = Vector2( 630, 10.0001 )
artifact = ExtResource( 3 )

[node name="ArrowButton" type="TextureButton" parent="Artifacts"]
margin_left = -910.0
margin_top = -39.9999
margin_right = -902.0
margin_bottom = -31.9999
rect_scale = Vector2( 10, 10 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowButton2" type="TextureButton" parent="Artifacts"]
margin_left = 920.0
margin_top = 40.0001
margin_right = 928.0
margin_bottom = 48.0001
rect_rotation = 180.0
rect_scale = Vector2( 10, 10 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clock" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="watch" type="Sprite" parent="Clock"]
position = Vector2( 160, -160 )
scale = Vector2( 10, 10 )
texture = ExtResource( 2 )

[node name="Time" type="Label" parent="Clock"]
margin_left = 90.0
margin_top = -310.0
margin_right = 220.0
margin_bottom = -237.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "10:30"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coil" type="Label" parent="."]
margin_left = 1330.0
margin_top = 970.0
margin_right = 1555.0
margin_bottom = 1037.0
rect_min_size = Vector2( 225, 0 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Mighty Coil"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="Coil"]
margin_left = -50.0
margin_top = -260.0
margin_right = -18.0
margin_bottom = -228.0
rect_scale = Vector2( 10, 10 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )
texture_disabled = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 1590.0
margin_top = 750.0
margin_right = 1890.0
margin_bottom = 1050.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonFullscreen" parent="Menu" instance=ExtResource( 10 )]
margin_left = 0.0
margin_top = 2.0
margin_right = 300.0
margin_bottom = 53.0
size_flags_horizontal = 1
text = "Fullscreen: ON"

[node name="ButtonSounds" parent="Menu" instance=ExtResource( 10 )]
margin_left = 0.0
margin_top = 63.0
margin_right = 300.0
margin_bottom = 114.0
size_flags_horizontal = 1
text = "Sounds: ON"

[node name="ButtonMusic" parent="Menu" instance=ExtResource( 10 )]
margin_left = 0.0
margin_top = 124.0
margin_right = 300.0
margin_bottom = 175.0
size_flags_horizontal = 1
text = "Music: ON"

[node name="ButtonAbout" parent="Menu" instance=ExtResource( 10 )]
margin_left = 0.0
margin_top = 185.0
margin_right = 300.0
margin_bottom = 236.0
size_flags_horizontal = 1
text = "About"

[node name="ButtonQuit" parent="Menu" instance=ExtResource( 10 )]
margin_left = 0.0
margin_top = 246.0
margin_right = 300.0
margin_bottom = 297.0
size_flags_horizontal = 1
text = "Quit"

[node name="Credits" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Credits"]
margin_right = 1920.0
margin_bottom = 1080.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Credits/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 1895.0
margin_bottom = 1055.0
custom_constants/separation = 40

[node name="Title" type="VBoxContainer" parent="Credits/MarginContainer/VBoxContainer"]
margin_right = 1870.0
margin_bottom = 259.0

[node name="Title" type="Label" parent="Credits/MarginContainer/VBoxContainer/Title"]
margin_right = 1870.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "EARTH'S SECRETS"
align = 1

[node name="Label2" type="Label" parent="Credits/MarginContainer/VBoxContainer/Title"]
margin_top = 97.0
margin_right = 1870.0
margin_bottom = 259.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "A game jam game made in 1 month as part of:
- Github Game Off 2020  (theme constraint: \"Moonshot\") -
- Web Monetization Challenge 2020 (theme constraint: \"Secrets\") -"
align = 1

[node name="categs" type="HBoxContainer" parent="Credits/MarginContainer/VBoxContainer"]
margin_top = 299.0
margin_right = 1870.0
margin_bottom = 627.0

[node name="production" type="VBoxContainer" parent="Credits/MarginContainer/VBoxContainer/categs"]
margin_right = 933.0
margin_bottom = 328.0
size_flags_horizontal = 3
custom_constants/separation = 30

[node name="Person" type="VBoxContainer" parent="Credits/MarginContainer/VBoxContainer/categs/production"]
margin_right = 933.0
margin_bottom = 149.0

[node name="Name" type="Label" parent="Credits/MarginContainer/VBoxContainer/categs/production/Person"]
margin_right = 933.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Anicet Nougaret"
align = 1

[node name="Desc" type="Label" parent="Credits/MarginContainer/VBoxContainer/categs/production/Person"]
margin_top = 97.0
margin_right = 933.0
margin_bottom = 149.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Design, Art, Story, Code"
align = 1

[node name="Person2" type="VBoxContainer" parent="Credits/MarginContainer/VBoxContainer/categs/production"]
margin_top = 179.0
margin_right = 933.0
margin_bottom = 328.0

[node name="Name" type="Label" parent="Credits/MarginContainer/VBoxContainer/categs/production/Person2"]
margin_right = 933.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Thibault Henrion"
align = 1

[node name="Desc" type="Label" parent="Credits/MarginContainer/VBoxContainer/categs/production/Person2"]
margin_top = 97.0
margin_right = 933.0
margin_bottom = 149.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Additional Design & Code"
align = 1

[node name="production2" type="VBoxContainer" parent="Credits/MarginContainer/VBoxContainer/categs"]
margin_left = 937.0
margin_right = 1870.0
margin_bottom = 328.0
size_flags_horizontal = 3
custom_constants/separation = 30

[node name="Label3" type="Label" parent="Credits/MarginContainer/VBoxContainer/categs/production2"]
margin_right = 933.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Licensed assets:"
align = 1

[node name="ButtonHideCredits" parent="Credits" instance=ExtResource( 10 )]
margin_left = 1730.0
margin_top = 1000.0
margin_right = 1880.0
margin_bottom = 1051.0
text = "Back"
[connection signal="pressed" from="Menu/ButtonFullscreen" to="." method="_on_ButtonFullscreen_pressed"]
[connection signal="pressed" from="Menu/ButtonSounds" to="." method="_on_ButtonSounds_pressed"]
[connection signal="pressed" from="Menu/ButtonMusic" to="." method="_on_ButtonMusic_pressed"]
[connection signal="pressed" from="Menu/ButtonAbout" to="." method="_on_ButtonAbout_pressed"]
[connection signal="pressed" from="Menu/ButtonQuit" to="." method="_on_ButtonQuit_pressed"]
[connection signal="pressed" from="Credits/ButtonHideCredits" to="." method="_on_ButtonHideCredits_pressed"]
